<resources>
    <string name="app">Explore_Japan_App</string>
    <string name="app_name">Explore Japan</string>
    <string name="hint_flag">flag_photo</string>
    <string name="map">Мапа</string>
    <string name="profile">Профіль</string>
    <string name="home">Головна</string>
    <string name="tips">Поради</string>
    <string name="info">О нас</string>
    <string name="article">Стаття</string>
    <string name="action">Дія</string>
    <string name="no_article">Наразі немає збережених статей</string>
    <string name="favorites_button">Збережені статті</string>
    <string name="profile_button">Профіль</string>
    <string name="login">Вхід</string>
    <string name="loginhint">Логін</string>
    <string name="registration">Реєстрація</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Підтвердження паролю</string>
    <string name="button_logout">Вийти з акаунту</string>
    <string name="button_delete_account">Видалити акаунт</string>
    <string name="new_email">Введіть нову електронну пошту</string>
    <string name="new_email2">Зміна електронної пошти</string>
    <string name="new_password">Введіть новий пароль</string>
    <string name="new_password2">Зміна паролю</string>
    <string name="button_update_email">Оновити пошту</string>
    <string name="button_update_password">Оновити пароль</string>
    <string name="delete_account_confirmation">Ви впевнені, що хочете видалити свій акаунт?</string>
    <string name="confirm_delete">Видалити</string>
    <string name="cancel">Скасувати</string>
    <string name="confirm_new_password">Введіть повторно новий пароль</string>
    <string name="please_relogin">Будь ласка, вийдіть і увійдіть знову, щоб застосувати зміни.</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="password_reset_sent">Посилання для скидання пароля надіслано на вашу пошту!</string>
    <string name="button_login">Увійти</string>
    <string name="button_registration">Зареєструватись</string>
    <string name="home_title">Оберіть місто для перегляду інформації</string>
    <string name="all">Загальна інформація</string>
    <string name="living">Проживання</string>
    <string name="living_one_one">Середні ціни на проживання</string>
    <string name="living_one_two">Рекомендовані райони для проживання</string>
    <string name="transport">Транспорт</string>
    <string name="transport_two_one">Внутрішні авіаперельоти</string>
    <string name="transport_two_one_one">Як дістатися з аеропорту до міста</string>
    <string name="transport_two_two">Залізничний транспорт</string>
    <string name="transport_two_two_one">Метро</string>
    <string name="transport_two_three">Місцевий транспорт</string>
    <string name="transport_two_four">Оренда авто</string>
    <string name="transport_two_five">Піші маршрути</string>
    <string name="food">Їжа</string>
    <string name="food_three_one">Ресторани</string>
    <string name="food_three_one_one">Ціни в ресторанах</string>
    <string name="food_three_one_two">Рекомендовані ресторани</string>
    <string name="food_three_one_three">Типи закладів</string>
    <string name="food_three_two">Вулична їжа</string>
    <string name="food_three_three">Ціни в супермаркетах</string>
    <string name="food_three_four">Місцеві делікатеси</string>
    <string name="place">Пам`ятки культури</string>
    <string name="tokyo">Токіо</string>
    <string name="tok_living_one_one_text">\tСередня ціна на проживання в Токіо залежить від типу закладу та району, а також від сезону, адже в періоди фестивалів чи цвітіння сакури ціни зростають. Бюджетні хостели та капсульні готелі коштують від ¥3,000 до ¥6,000 за ніч, що робить їх найдешевшим варіантом для туристів. Стандартні готелі середнього класу обійдуться в межах ¥10,000–¥20,000 за ніч, залежно від розташування та рівня комфорту. Рьокани та розкішні готелі в центральних районах зазвичай коштують від ¥30,000 за ніч і вище. Деякі готелі пропонують знижки при бронюванні заздалегідь або для тривалого перебування, що може допомогти заощадити. Також ціни можуть зростати у вихідні та святкові дні, коли попит на проживання вищий. Важливо враховувати додаткові податки та сервісні збори, які додаються до вартості номера. Для економії можна обирати заклади у віддаленіших районах, де ціни зазвичай нижчі.</string>
    <string name="tok_living_one_two_text">\tСіндзюку — один із найкращих районів для проживання завдяки зручному транспортному сполученню та великій кількості розваг, таких як ресторани, бари та магазини. Тут розташована одна з найбільших залізничних станцій у світі, що дозволяє легко дістатися до інших частин Токіо чи навіть до інших міст. Сібуя підходить для тих, хто хоче бути в центрі нічного життя та молодіжної культури, адже район відомий своїм жвавим перехрестям і модними бутиками. У Сібуї також багато кафе та клубів, що робить її ідеальною для любителів вечірніх розваг. Асакуса — чудовий вибір для тих, хто шукає традиційну атмосферу, адже тут розташовані історичні храми та старовинні вулички. Цей район також більш спокійний, ніж Сіндзюку чи Сібуя, що підходить для тих, хто хоче відпочити від галасу. Ще один варіант — район Гінза, який відомий розкішними магазинами та ресторанами, але проживання тут дорожче.</string>
    <string name="tok_transport_two_one_text">\tШвидкі перельоти з Токіо доступні через аеропорти Ханеда (HND) і Наріта (NRT), які забезпечують з’єднання з багатьма внутрішніми пунктами призначення. Ханеда, розташований ближче до центру, пропонує рейси від JAL і ANA до Саппоро та Осаки за годину. Наріта, відомий міжнародними напрямками, приймає лоукостерів, таких як Jetstar Japan, із квитками до Саппоро від ¥3,500, а ZIPAIR пропонує економ-варіанти до Фукуоки від ¥4,000 із базовими зручностями. У популярні періоди (квітень, серпень) тарифи зростають на 20%, додатково стягується плата за багаж (¥1,000-¥2,000) і податки (¥800-¥1,200). У терміналах є безплатний Wi-Fi, торговельні точки та трансферні автобуси. Для заощаджень бронюйте квитки за 1-2 місяці через платформи-агрегатори.</string>
    <string name="tok_transport_two_one_one_text">\tХанеди до центральної частини міста Токіо Монорейл доставить за 20 хвилин, тоді як Keikyu Line потребує 30 хвилин. З Наріти JR Narita Express доїде до вокзалу Токіо за 55 хвилин, а автобуси завершать маршрут за 70 хвилин, зупиняючись біля готелів. Таксі обійдеться від ¥8,000, тому краще обрати громадський транспорт. У обох аеропортах є вказівники англійською та інформаційні пункти. Увечері рейсів менше, тож перевірте розклад і скористайтеся додатком для планування.</string>
    <string name="tok_transport_two_two_text">\tРозгалужена залізнична система дозволяє легко пересуватися Токіо та його околицями, зокрема на сінкансенах. Місцеві маршрути JR охоплюють усі куточки міста, а вокзал Токіо слугує ключовим вузлом для далеких поїздок. Туристам до вподоби JR Pass (¥50,000 на 7 днів), що знижує витрати. Подорож сінкансеном до Кіото коштує приблизно ¥14,000, а локальні поїзди — від ¥150 до ¥500 залежно від дистанції. У години пік бронюйте місця заздалегідь, адже ціни можуть підскочити. Картки Suica полегшують оплату, а сінкансени пропонують Wi-Fi та простір для багажу, хоч локальні потяги переповнені вранці (7:00-9:00) і ввечері (17:00-19:00). Знаки англійською та квиткові автомати допомагають орієнтуватися.</string>
    <string name="tok_transport_two_two_one_text">\tМережа токійського метро з кількома лініями з’єднує головні райони, функціонуючи з 5:00 до півночі. Картки Suica чи Pasmo зручні для оплати, а також придатні для автобусів і крамниць. Оператори Tokyo Metro та Toei Subway забезпечують інтегровані маршрути з англомовними покажчиками. У ранкові години (8:00-10:00) буває тісно, тому краще планувати поїздки пізніше. Метро дозволяє уникати заторів і швидко долати відстані.</string>
    <string name="tok_transport_two_three_text">\tТранспортна інфраструктура Токіо включає метро, автобуси та таксі, що охоплюють усі зони. Автобуси зручні для Роппонгі чи Одайби, із тарифом приблизно ¥210. Таксі популярні вночі, стартовий тариф — ¥500 за 1-2 км, із націнкою ¥100 за 200-300 м, особливо в години пік через затори. Щоденний проїзний (¥600) вигідний для метро та автобусів. На зупинках є розклади з табло, оплата можлива через Suica чи готівку. Таксі обладнані автоматичними дверима, але ціна до Ханеди сягає ¥7,000.</string>
    <string name="tok_transport_two_four_text">\tДля поїздок за межі міста оренда авто в Токіо може бути практичною, попри зручний громадський транспорт. Потрібне міжнародне посвідчення, адже рух лівобічний. Компактні машини коштують від ¥6,000 до ¥12,000 за добу, пальне — ¥160/літр, паркування в центрі — до ¥1,000/год. Страховка додає ¥1,000-¥2,000, а платні дороги (наприклад, до Фудзі) — до ¥2,000. Знижки діють при тижневій оренді. Уникайте центру через затори, авто краще для виїздів за місто. Перевірте умови страхування та повернення.</string>
    <string name="tok_transport_two_five_text">\tПрогулянки в Асакусі відкривають храми та історичні вулички з автентичною атмосферою. У Сібуї від перехрестя можна дійти до парку Йойогі, насолоджуючись краєвидами. Хаадзюку з вулицею Такешіта манить шопінгом і кав’ярнями. У парку Уено чекають музеї та ставки, особливо під час цвітіння сакури, а Гінза вражає вечірнім освітленням. Широкі тротуари полегшують рух, але потрібне зручне взуття через нерівності. Водії поступаються, а лавки дають змогу відпочити.</string>
    <string name="tok_food_three_one_text">\tРесторани Токіо вражають різноманітністю: від вишуканих до бюджетних, із традиційними та сучасними стравами. У центрі, наприклад, у Гінзі, є заклади з сезонними стравами, такими як свіжі морепродукти чи овочі. У Сіндзюку популярні ізакаї, де подають закуски, як-от едамаме чи смажену курку, із саке в невимушеній атмосфері. Більшість ресторанів пропонують англомовні меню або планшети для замовлення, що зручно для туристів. Цілодобові заклади ідеальні для пізніх вечерь. Безкоштовний зелений чай чи вода — стандарт гостинності. Чайові не приймаються, адже сервіс включений у ціну. У популярних місцях, особливо в обід, бувають черги через невеликі приміщення. Деякі ресторани мають вид на місто, що додає атмосфери.</string>
    <string name="about_us">Інформація про нас</string>
    <string name="why_we_created">Чому ми вирішили створити цю програму?</string>
    <string name="why_we_created_description">Наша програма була створена з метою допомогти туристам, які планують поїздку до Японії, отримати цілісне уявлення про країну, її культуру та найцікавіші пам`ятки. Японія — це країна з унікальною історією та традиціями, і ми хочемо, щоб наші користувачі могли отримати максимум інформації, щоб їхня подорож була комфортною та незабутньою. Ми вирішили зібрати всю необхідну інформацію в одному місці, щоб зробити подорожі ще зручнішими та цікавішими для вас.</string>
    <string name="wishes">Побажання</string>
    <string name="wishes_description">Ми сподіваємося, що наша програма стане на допомогу у плануванні вашої подорожі до Японії та дасть змогу насолоджуватися кожним моментом у цій чудовій країні. Бажаємо вам захоплюючих подорожей, відкриттів нових місць та знайомств з цікавими людьми! Нехай ваше перебування в Японії залишить тільки найкращі враження!</string>
    <string name="contact_info">Контактна інформація </string>
    <string name="contact_numbers_description">Для термінових запитів або консультацій:\n\nТелефон (графік роботи: Пн-Пт, 09:00 - 18:00)\n+380 90-1234-5678\n\nТелефон (для міжнародних дзвінків)\n+81 3-1234-5678\n\nПошта\nsupport@explorejapanapp.com</string>
</resources>