<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <!-- Шапка -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/grad3"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/top_line"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:scaleX="5"
            android:scaleY="1"
            android:src="@drawable/horizontal_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/zen_old_mincho"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ScrollView для вмісту -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/about_us"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/cambo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/why_we_created"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/cambo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:text="@string/why_we_created_description"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/wishes"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/cambo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:text="@string/wishes_description"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/contact_info"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/cambo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingBottom="16dp"
                android:text="@string/contact_numbers_description"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>